# Rust-3D-Game-Engine

./: Cargo.toml  README.md
engine_tester/: Cargo.toml
engine_tester/src/: main.rs
rge/: Cargo.toml
rge/src/: custom_errors.rs  lib.rs
rge/src/graphics/: drawer.rs  gl_wrapper.rs  mod.rs  window.rs
rge/src/graphics/shaders/: fragment_shader.glsl  vertex_shader.glsl
vertex_generator/: Cargo.toml
vertex_generator/src/: main.rs
