
[package]
name = "rge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
env_logger = "0.11.3"
gl = "0.14.0"
glfw = "0.55.0"
lazy_static = "1.4.0"
log = "0.4.21"
thiserror = "1.0.59"


